// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FavouriteStarButton renders correctly 1`] = `
<div>
  <span
    aria-label="Add favorite"
    class="glyphicon glyphicon-star-empty"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`components/FavouriteStarButton renders enabled with onClick 1`] = `
<div>
  <span
    aria-label="Remove favorite"
    class="glyphicon glyphicon-star"
    role="button"
    tabindex="0"
  />
</div>
`;
